--- a/appdaemon/apps/apps.yaml
+++ b/appdaemon/apps/apps.yaml
@@ -3,7 +3,7 @@ tstat_magic:
   class: tstatmagic
   heat_tstat: climate.2gig_technologies_ct101_thermostat_iris_heating_1
   cool_tstat: climate.2gig_technologies_ct101_thermostat_iris_cooling_1
-  device_tracker: group.people
-  group_doorswindows: group.doorsandwindows
+  proximity_home: proximity.home
+  sensor_doorsopen: binary_sensor.doorsopen
   constrain_input_boolean: input_boolean.hvac_automation
   outside_temp: sensor.dark_sky_temperature
